--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,5 @@
 {
+  "name": "Blockbash - Reentrancy Fundamentals Attack Lab",
   "image": "ghcr.io/blockbash/reentrancy-fundamentals-attack-prompt:latest",
   "runArgs": ["--name=reentrancy-fundamentals-attack-prompt",],
   "workspaceFolder": "/contracts",
