--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
-  "name": "Blockbash - Reentrancy Fundamentals Attack Lab",
   "image": "ghcr.io/blockbash/reentrancy-fundamentals-attack-prompt:latest",
+  "name": "Blockbash - Reentrancy Fundamentals Attack Lab",
   "runArgs": ["--name=reentrancy-fundamentals-attack-prompt",],
   "workspaceFolder": "/contracts",
+  "workspaceMount": "target=/contracts,type=volume"
 }
