--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
   "image": "ghcr.io/blockbash/reentrancy-fundamentals-attack-prompt:latest",
   "name": "Blockbash - Reentrancy Fundamentals Attack Lab",
-  "postCreateCommand": "ln -s -f /contracts /workspaces/reentrancy-fundamentals-attack-prompt",
+  "postCreateCommand": "rm -rf /workspaces/reentrancy-fundamentals-attack-prompt && ln -s -f /contracts /workspaces/reentrancy-fundamentals-attack-prompt",
   "runArgs": ["--name=reentrancy-fundamentals-attack-prompt",]
 
 }
