--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,6 @@
 {
   "image": "ghcr.io/blockbash/reentrancy-fundamentals-attack-prompt:latest",
+  "workspaceFolder": "/workspaces/reentrancy-fundamentals-attack-prompt"
 //  "name": "Blockbash - Reentrancy Fundamentals Attack Lab",
 //  "runArgs": ["--name=reentrancy-fundamentals-attack-prompt",],
 //  "workspaceMount": "source=reentrancy-fundamentals-attack-prompt,type=volume"
